# gcp-sa

./: Cargo.toml  LICENSE  README.md  test-publickey.pem  test-service-account.json
src/: error.rs  lib.rs
