[package]
name = "gcp-sa"
version = "0.1.0"
authors = ["Antti Peltonen <antti.peltonen@solita.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frank_jwt = "3.1"
log = "0.4"
serde_json = "1.0"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }
tempfile = "3.2"
reqwest = "0.11"
