[package]
description = "Google Cloud Platform Service Account OAuth authentication abstraction"
name = "gcp-sa"
version = "0.2.0"
authors = ["Antti Peltonen <antti.peltonen@iki.fi>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/braincow/gcp-sa"
repository = "https://github.com/braincow/gcp-sa"
readme = "README.md"
keywords = ["oauth", "oauth2", "authentication", "gcp"]
categories = ["authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frank_jwt = "3.1"
log = "0.4"
serde_json = "1.0"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }
tempfile = "3.2"
reqwest = "0.11"

[dev-dependencies]
tokio = { version = "1.14", features = ["rt", "macros"] }
wiremock = "0.5"
